\name{NEWS}
\title{News for Package \pkg{cogena}}

\section{Changes in version 0.99.2 (2015-04-01)}{
\itemize{
    \item Update indent based on the coding style of Bioconductor.
    \item Trim long line.
    }
}

\section{Changes in version 0.99.1 (2015-03-31)}{
\itemize{
    \item Add runnable examples for functions.
    \item Update R version dependency from 2.10 to 3.2.
    \item Add non-empty value sections for some functions.
    }
}
