@@ -1,5 +1,5 @@
 Package: cogena
-Version: 0.99.2
+Version: 0.99.3
 Title: co-expressed gene-set enrichment analysis
 Authors@R: c(person("Zhilong", "Jia", role =c("aut", "cre"), 
     email="zhilongjia@gmail.com"), 
@@ -50,9 +50,10 @@ Suggests:
     biwt,
     knitr,
     testthat
-Collate: 
+Collate:
     dist_class.R
     cogena_class.R
+    stopImplicitCluster.R
     PD.R
     PEI.R
     cogena.R
