@@ -45,6 +45,8 @@ setMethod("optCluster", signature(object="cogena"),
     if (ncores > parallel::detectCores()) {
         ncores <- parallel::detectCores()
     }
+#     cl <- parallel::makeCluster(ncores)
+#     doParallel::registerDoParallel(cl)
     doParallel::registerDoParallel(cores=ncores)
     i = NULL
     score <- 
@@ -97,7 +99,10 @@ setMethod("optCluster", signature(object="cogena"),
             }
         }
         cl_score
-    }
+        }
+    #stopCluster(cl)
+    stopImplicitCluster()
+    
     rownames(score) <- clusterMethods(object)
     return (score)
 })
