@@ -74,7 +74,7 @@ annofile <- system.file("extdata", annoGMT, package="cogena")
 # the number of clusters. It could be a vector.
 nClust <- 2:8
 # the number of cores.
-ncore <- 1
+ncore <- 2
 # the clustering methods
 clMethods <- c("hierarchical","kmeans")
 # the distance metric
